# inventoryflow-catalog-ingest

./: .gitignore  CHANGELOG.md  LICENSE  PLAN.md  README.md  STATUS.md  SUBMISSION.md
docs/: COMPARISON.md  EXECUTION_PLAN.md  RECRUITER_GUIDE.md  (+5 more)
track-b-data-engineering/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
track-b-data-engineering/dagster_project/: __init__.py  asset_checks.py  assets.py  definitions.py  resources.py  section_detector.py
track-b-data-engineering/dagster_project/ai/: __init__.py  cached.py  factory.py  fallback_chain.py  gemini_vision.py  groq_vision.py  handoff.py  mock.py  ollama.py  ollama_vision.py  openrouter_vision.py  provider.py  quota_tracker.py
track-b-data-engineering/dagster_project/cli/: __init__.py  bench.py  enrich.py  ingest.py
track-b-data-engineering/dbt/: dbt_project.yml  packages.yml  profiles.yml
track-b-data-engineering/dbt/models/bronze/: sources.yml
track-b-data-engineering/dbt/models/gold/: gold_marketplace_view.sql  gold_products_mart.sql  schema.yml
track-b-data-engineering/dbt/models/silver/: schema.yml  silver_fitment_atomic.sql  silver_parts_atomic.sql
track-b-data-engineering/notebooks/: duckdb_iceberg_demo.py
track-b-data-engineering/parser/: __init__.py  cell_utils.py  fitment_resolver.py  image_extractor.py  parse_xlsx.py  row_normalizer.py  section_detector.py
track-b-data-engineering/scripts/: bench_fitment.py  iceberg_roundtrip.py  materialize_all.py  parity_check.py  vision_daily_run.sh  vision_extract_all.py  vision_smoke_test.py  vision_status.py
track-b-data-engineering/streaming/: redpanda_seed.py  risingwave_views.sql
track-b-data-engineering/tests/: test_fallback_chain.py  test_section_detector.py
(+140 files in other folders)
